anyway since it doesn't seem to break anything.  But I'm going to
implement the revision control backend in a new and completely
different way to (hopefully) be a lot easier to extend.
----------------------------------------------------------------------
Tue Mar 30 21:21:57 2004                        Michael Jennings (mej)

Converted pkgtool to use new mezz_init() and options stuff.

Moved cache files.
----------------------------------------------------------------------
Thu Apr  1 18:24:19 2004                        Michael Jennings (mej)

Added config engine.

Added initial attempt at preserving successful build logs.
----------------------------------------------------------------------
Sun Apr  4 22:28:21 2004                        Michael Jennings (mej)

Refactored config engine.

Made error messages shorter and less redundant.

Merged RPM and SRPM info into new cache.  No more unnecessary rpm
queries on startup.
----------------------------------------------------------------------
Wed Apr  7 14:23:39 2004                        Michael Jennings (mej)

Converted buildtool to use new init/option style.

Added skeleton for new source code management (SCM) mechanism.
----------------------------------------------------------------------
Thu Apr  8 17:40:49 2004                        Michael Jennings (mej)

Correct hint filename for new package name scheme.
----------------------------------------------------------------------
Sun Apr 11 20:05:16 2004                        Michael Jennings (mej)

Allow orc-style cleaning to preserve SPECS directories.

Exit code now corresponds with how many packages were actually built
during this run.  If none were built, the number of failures is
returned as a negative number.

Added 2 new options, one of which should already work, for determining
whether or not to retry broken builds or rebuild old successful
builds.
----------------------------------------------------------------------