@@ -21,7 +21,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: RPM.pm,v 1.26 2004/03/24 19:52:16 mej Exp $
+# $Id: RPM.pm,v 1.27 2004/04/15 00:25:43 mej Exp $
 #
 
 package Mezzanine::RPM;
@@ -680,10 +680,11 @@ replace_defines($)
         #dprint "Found macro:  $var\n";
         if (defined $specdata->{"DEFINES"}{$var}) {
             #dprint "Replacing with:  $specdata->{DEFINES}{$var}\n";
-            $line =~ s/\%\{$var\}/$specdata->{"DEFINES"}{$var}/g;
+            $line =~ s/\%\{$var\}/$specdata->{"DEFINES"}{$var}/eg;
             #reset;
         } else {
             #dprint "Definition not found.\n";
+            $line =~ s/\%\{$var\}//g;
         }
     }
     return $line;
